--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,6 +12,8 @@
   <div class="form-group">
     <button class="btn btn-primary" type="submit">login</button>
   </div>
+        <a href="/signup">Sign Up</a>
+
 </form>
 
 <script src="/js/login.js"></script>
