adjusted add-workout/home page

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,24 +5,90 @@
                 <div class="card">
                     <header class="card-header">
                         <p class="card-header-title">
-                            Plan Exercise Session
+                            <h1>Plan Exercise Session</h1>
                         </p>
                     </header>
                     <div class="card-content" id="form-top">
                         <div class="content">
                             <div class="field">
-                                <label class="label">Workout Category *</label>
+                                <label class="label">Workout Category</label>
                                 <div class="control">
                                     <div class="select">
                                         <select id="category">
-                                            <option>Cardio - Running</option>
-                                            <option>Cardio - Swimming</option>
-                                            <option>Cardio - Elliptical</option>
-                                            <option>Cardio - Biking</option>
-                                            <option>HIIT</option>
+                                            <option>Running</option>
                                             <option>Weightlifting</option>
-                                            <option>Pilates</option>
-                                            <option>Yoga</option>
+                                            <option>Walking</option>
+                                            <option>swimming</option>
+                                            <option>Hiking</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="field">
+                                <label class="label">Workout Name</label>
+                                <div class="control">
+                                    <input class="input" type="text" placeholder="If needed" id="duration">
+                                </div>
+                            </div>
+
+                            <div class="field">
+                                <label for="date-input" class="label">Date</label>
+                                <div class="control">
+                                    <input class="form-control" type="date" value="" id="date-input">
+                                </div>
+                            </div>
+
+                            <div class="field">
+                                <label class="label">Duration</label>
+                                <div class="control">
+                                    <input class="input" type="text" placeholder="How long were you active?" id="distance">
+                                </div>
+                            </div>
+
+                            <div class="field">
+                                <label class="label">Weight</label>
+                                <div class="control">
+                                    <input class="input" type="text" placeholder="Do you even lift bro?" id="duration">
+                                </div>
+                            </div>
+
+                    <div class="card-content" id="form-top">
+                        <div class="content">
+                            <div class="field">
+                                <label class="label">Sets</label>
+                                <div class="control">
+                                    <div class="select">
+                                        <select id="category">
+                                            <option>1</option>
+                                            <option>2</option>
+                                            <option>3</option>
+                                            <option>4</option>
+                                            <option>5</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+
+                    <div class="card-content" id="form-top">
+                        <div class="content">
+                            <div class="field">
+                                <label class="label">Reps</label>
+                                <div class="control">
+                                    <div class="select">
+                                        <select id="category">
+                                            <option>1</option>
+                                            <option>2</option>
+                                            <option>3</option>
+                                            <option>4</option>
+                                            <option>5</option>
+                                            <option>6</option>
+                                            <option>7</option>
+                                            <option>8</option>
+                                            <option>9</option>
+                                            <option>10</option>
+                                            <option>11</option>
+                                            <option>12</option>
                                         </select>
                                     </div>
                                 </div>
@@ -31,23 +97,50 @@
                             <div class="field">
                                 <label class="label">Distance</label>
                                 <div class="control">
-                                    <input class="input" type="text" placeholder="If distance is not a factor, type 0." id="distance">
-                                </div>
-                            </div>
-
-                            <div class="field">
-                                <label class="label">Duration *</label>
-                                <div class="control">
                                     <input class="input" type="text" placeholder="How long did you do this exercise for?" id="duration">
                                 </div>
                             </div>
 
+                    <div class="card-content" id="form-top">
+                        <div class="content">
                             <div class="field">
-                                <label for="date-input" class="label">Date *</label>
+                                <label class="label">Laps</label>
                                 <div class="control">
-                                    <input class="form-control" type="date" value="" id="date-input">
+                                    <div class="select">
+                                        <select id="category">
+                                            <option>1</option>
+                                            <option>2</option>
+                                            <option>3</option>
+                                            <option>4</option>
+                                            <option>5</option>
+                                            <option>6</option>
+                                            <option>7</option>
+                                            <option>8</option>
+                                            <option>9</option>
+                                            <option>10</option>
+                                            <option>11</option>
+                                            <option>12</option>
+                                        </select>
+                                    </div>
                                 </div>
                             </div>
+
+                    <div class="card-content" id="form-top">
+                        <div class="content">
+                            <div class="field">
+                                <label class="label">Pace</label>
+                                <div class="control">
+                                    <div class="select">
+                                        <select id="category">
+                                            <option>Slow</option>
+                                            <option>Moderate</option>
+                                            <option>Medium</option>
+                                            <option>Fast</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+
                             <div class="field">
                                 <label class="label">Workout Details</label>
                                 <div class="control">
@@ -55,7 +148,6 @@
                                 </div>
                             </div>
 
-                        <p class="optional"><i><sub>* Required field</sub></i></p>
                         
                         </div>
                     </div>
