Logout button fixed

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -7,6 +7,7 @@
                         <p class="card-header-title">
                             <h1>Plan Exercise Session</h1>
                         </p>
+                        <a href='/login.handlebars' id="logout">Logout</a>
                     </header>
                     <div class="card-content" id="form-top">
                         <div class="content">
@@ -158,14 +159,12 @@
             </div>
         </div>
     </div>
-
 </main>
 
 <div id="myModal" class="modal fade">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title w-100">You successfully added a workout session!</h5>
                 </div>
                 <div class="modal-body">
                     <p>What would you like to do next?</p>
@@ -178,3 +177,6 @@
             </div>
         </div>
     </div>
+
+    <script src="/public/js/logout.js"</script></script>
+</main>
