--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -80,7 +80,7 @@
                     <form>
                         <a class="btn close_modal pt-1 bye-btn" href="/add_workout" role="button">Add Another Workout</a>
                         &nbsp;
-                        <a class="btn close_modal pt-1 bye-btn" href="/view_workouts" role="button">View Workouts</a>
+                        <a class="btn close_modal pt-1 bye-btn" href="/workout_summary" role="button">Workout Summary</a>
                     </form>
                 </div>
             </div>
