--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -9,10 +9,10 @@
         <input type="text" id="email-input-signup" />
       </div>
       <div>
-        <label for="password-input-signup">Password</label>
+        <label for="password-input-signup">Password (must be 10 characters)</label>
         <input type="password" id="password-input-signup" />
       </div>
-      <button type="submit" id="signup-btn" class="btn" >Signup!</button>
+      <button type="submit" id="signup-btn" class="btn">Signup!</button>
       <a href="/login">Login</a>
     </form>
   </div>
