fixed logout button

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -177,5 +177,5 @@
         </div>
     </div>
 
-    <script src="/public/js/logout.js"</script></script>
+    <script src="/js/logout.js"</script></script>
 </main>
