--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -47,6 +47,6 @@
 {{!--<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> ? --}}
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 <script src="/js/workouts.js"></script>
-<script src="/public/js/logout.js"
+<script src="/js/logout.js"
 </body>
 </html>
