view workout JS and handlebar

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,7 +26,7 @@
             </a>
         </li>
         <li class="nav-item mr-2 mt-1">
-            <a href="/view_workouts" class="nav-link view-workout">View Workouts
+            <a href="/workouts" class="nav-link view-workout">View Workouts
             </a>
         </li>
     </ul>
