--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,19 +1,21 @@
-<h2>Login</h2>
-
-<form class="form login-form">
-  <div class="form-group">
-    <label for="email-login">email:</label>
-    <input class="form-input" type="text" id="email-login" />
-  </div>
-  <div class="form-group">
-    <label for="password-login">password:</label>
-    <input class="form-input" type="password" id="password-login" />
-  </div>
-  <div class="form-group">
-    <button class="btn btn-primary" type="submit">login</button>
-  </div>
+<div class="card">
+    <img src="/assets/logo.png">
+    <form id="login-form" class="card-body">
+        <!--Email Input-->
+        <div class="form-outline mb-4">
+            <label for="email-login">Email:</label><br>
+            <input class="form-input" type="text" id="email-login" />
+        </div>
+        <!--Password Input-->
+        <div class="form-outline mb-4">
+            <label for="password-login">password:</label><br>
+            <input class="form-input" type="password" id="password-login" />
+        </div>
+        <div class="form-group">
+            <button id="login-btn" class="btn btn-primary" type="submit">login</button>
+        </div>
+        <br>
+        <!--Sign-Up Button-->
         <a href="/signup">Sign Up</a>
-
-</form>
-
-<script src="/js/login.js"></script>
+    </form>
+</div>
