updated add workout page

--- a/views/addworkout.handlebars
+++ b/views/addworkout.handlebars
@@ -1,11 +1,16 @@
-<div class="card">
-    <img src="/assets/logo.png">
+{{!--<main id="add-workout">
+    <div class="container">
+        <div class="row"
     <form id="add-workout-form">
         <div class="form-outline mb-3">
             <label for="workout-name"></label><br>
             <input type="text" placeholder="Workout Name" id="workout-name" />
         </div>
-        <div class="form-outline mb-3">
+--}}
+
+
+
+        {{!--<div class="form-outline mb-3">
             <label for="workout-category">Select Workout Type</label><br>
             <div class="control">
                 <div class="select">
@@ -19,7 +24,10 @@
                     </select>
                 </div>
             </div>
-        </div>
+        </div>--}}
+
+
+
         <div class="form-outline mb-3">
             <label for="date-input" class="label">Date</label>
             <div class="control">
@@ -27,19 +35,19 @@
             </div>
         </div>
 
-        <div class="form-outline mb-2">
+        {{!--<div class="form-outline mb-2">
             <label class="label">Duration</label>
             <div class="control">
                 <input class="input" type="text" placeholder="How long were you active?" id="duration" />
             </div>
-        </div>
-        <div class="form-outline mb-2">
+        </div>--}}
+        {{!--<div class="form-outline mb-2">
             <label class="label">Distance</label>
             <div class="control">
                 <input class="input" type="text" placeholder="How far did you go?" id="duration" />
             </div>
-        </div>
-        <div class="form-outline mb-2">
+        </div>--}}
+        {{!--<div class="form-outline mb-2">
             <label class="label">Weight</label>
             <div class="control">
                 <input class="input" type="text" placeholder="Do you even lift bro?" id="duration" />
@@ -126,7 +134,7 @@
                         </select>
                     </div>
                 </div>
-            </div>
+            </div>--}}
 
             <div class="form-outline mb-2">
                 <label class="label">Workout Details</label>
