--- a/views/addworkout.handlebars
+++ b/views/addworkout.handlebars
@@ -1,157 +1,101 @@
-{{!--<main id="add-workout">
+<main id="add-workout">
     <div class="container">
-        <div class="row"
-    <form id="add-workout-form">
-        <div class="form-outline mb-3">
-            <label for="workout-name"></label><br>
-            <input type="text" placeholder="Workout Name" id="workout-name" />
-        </div>
---}}
+        <div class="row">
+            <div clas="col-12">
+                <div class="card">
 
+                    {{!-- Header for Adding Workout --}}
+                    <header class="card-header">
+                        <p class="card-header-title">
+                            Add a Workout
+                        </p>
+                    </header>
 
-
-        {{!--<div class="form-outline mb-3">
-            <label for="workout-category">Select Workout Type</label><br>
-            <div class="control">
-                <div class="select">
-                    <select class="form-control mb-2" id="workout-category">
-                        <option>Running</option>
-                        <option>Weightlifting</option>
-                        <option>Walking</option>
-                        <option>Swimming</option>
-                        <option>Hiking</option>
-                        <option>Other</option>
-                    </select>
-                </div>
-            </div>
-        </div>--}}
-
-
-
-        <div class="form-outline mb-3">
-            <label for="date-input" class="label">Date</label>
-            <div class="control">
-                <input class="form-control" type="date" value="" id="date-input" />
-            </div>
-        </div>
-
-        {{!--<div class="form-outline mb-2">
-            <label class="label">Duration</label>
-            <div class="control">
-                <input class="input" type="text" placeholder="How long were you active?" id="duration" />
-            </div>
-        </div>--}}
-        {{!--<div class="form-outline mb-2">
-            <label class="label">Distance</label>
-            <div class="control">
-                <input class="input" type="text" placeholder="How far did you go?" id="duration" />
-            </div>
-        </div>--}}
-        {{!--<div class="form-outline mb-2">
-            <label class="label">Weight</label>
-            <div class="control">
-                <input class="input" type="text" placeholder="Do you even lift bro?" id="duration" />
-            </div>
-        </div>
-
-        <!--<div class="form-outline mb-4">
-                        <div class="content">-->
-        <div class="form-outline mb-2">
-            <div class="control">
-                <label class="label">Sets</label>
-                <div class="control">
-                    <div class="select">
-                        <select id="category">
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-
-            <div class="form-outline mb-2">
-                <div class="control">
-                    <label class="label">Reps</label>
-                    <div class="select">
-                        <select id="category">
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5</option>
-                            <option>6</option>
-                            <option>7</option>
-                            <option>8</option>
-                            <option>9</option>
-                            <option>10</option>
-                            <option>11</option>
-                            <option>12</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!--<div class="form-outline mb-2">
+                    {{!-- Form to Add Workout --}}
                     <div class="card-content" id="form-top">
-                        <div class="content">-->
-        <div class="form-outline mb-2">
-            <div class="control">
-                <label class="label">Laps</label>
-                <div class="select">
-                    <select id="category">
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
-                        <option>6</option>
-                        <option>7</option>
-                        <option>8</option>
-                        <option>9</option>
-                        <option>10</option>
-                        <option>11</option>
-                        <option>12</option>
-                    </select>
-                </div>
-            </div>
-        </div>
-        <!--</div>-->
+                        <div class="content">
 
-        <div class="form-outline mb-2">
-            <div class="control">
-                <label class="label">Pace</label>
-                <div class="control">
-                    <div class="select">
-                        <select id="category">
-                            <option>Slow</option>
-                            <option>Moderate</option>
-                            <option>Medium</option>
-                            <option>Fast</option>
-                        </select>
+                            {{!--Category for Workout--}}
+                            <div class="field">
+                                <label class="label">Select Workout Type</label>
+                                <div class="control">
+                                    <div class="select">
+                                        <select id="category">
+                                            <option>Running</option>
+                                            <option>Weightlifting</option>
+                                            <option>Walking</option>
+                                            <option>Swimming</option>
+                                            <option>Hiking</option>
+                                            <option>Other</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+
+                            {{!-- Distance Input--}}
+                            <div class="field">
+                                <label class="label">Distance</label>
+                                <div class="control">
+                                    <input class="input" type="text"
+                                        placeholder="How far did you go? If distance is not a factor, enter 0."
+                                        id="distance">
+                                </div>
+                            </div>
+
+                            {{!-- Duration Input--}}
+                            <div class="field">
+                                <label class="label">Duration</label>
+                                <div class="control">
+                                    <input class="input" type="text"
+                                        placeholder="How long did you do this excercise for?" id="duration">
+                                </div>
+                            </div>
+
+                            {{!-- Date Input --}}
+                            <div class="field">
+                                <label for="date-input" class="label">Date<label>
+                                        <div class="control">
+                                            <input class="form-control" type="date" value="" id="date-input" ? </div>
+                                        </div>
+
+                                        {{!-- Details Input --}}
+                                        <div class="field">
+                                            <label class="label">Workout Details</label>
+                                            <div class="control">
+                                                <textarea class="textarea"
+                                                    placeholder="Enter any other details about this workout. (i.e. reps, weight, etc.)"
+                                                    id="details"></textarea>
+                                            </div>
+                                        </div>
+                            </div>
+                        </div>
+
+                        <footer class="card-footer" id="add-a-workout">
+                            <a href="#" type="submit" class="card-footer-item">Add Workout</a>
+                        </footer>
                     </div>
                 </div>
-            </div>--}}
-
-            <div class="form-outline mb-2">
-                <label class="label">Workout Details</label>
-                <div class="control">
-                    <textarea class="textarea"
-                        placeholder="Enter any other details about this workout. (i.e. reps, weight, etc.)"
-                        id="details"></textarea>
-                </div>
             </div>
-
-
         </div>
-        <div class="card-footer" id="add-a-workout">
-            <a href="#" type="submit" class="card-footer-item">Add Workout</a> <br />
-            <a href="#" type="submit" class="card-footer-item">Add Another Workout</a> <br />
-            <a href="#" type="submit" class="card-footer-item">Workout Summary</a> <br />
-            <a href="/logout" id="logout-btn" class="card-footer-item">Logout</a>
+</main>
+
+{{!-- Add another workout or view workouts --}}
+
+{{!-- Modal: Add another workout or view workouts --}}
+<div id="myModal" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title w-100">You successfully added a workout session!</h5>
+            </div>
+            <div class="modal-body">
+                <p>What would you like to do next?</p>
+                <form>
+                    <a class="btn close_modal pt-1 bye-btn" href="/add_workout" role="button">Add Another Workout</a>
+                    &nbsp;
+                    <a class="btn close_modal pt-1 bye-btn" href="/workoutsummary" role="button">View Workouts</a>
+                </form>
+            </div>
         </div>
-    </form>
+    </div>
 </div>
