--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -5,7 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootcamp Fitness</title>
-    <link rel="stylesheet" href="/css/styles.css">
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
+    <!-- Bootstrap -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.css" rel="stylesheet">
+
+    <!--External CSS Link-->
+    <link rel="stylesheet" href="public/css/styles.css">
 </head>
 
 <body>
@@ -24,11 +35,11 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item mt-1">
-                        <a href="/add_workout" class="nav-link add-workout">Add Workout
+                        <a href="/addworkout" class="nav-link add-workout">Add Workout
                         </a>
                     </li>
                     <li class="nav-item mr-2 mt-1">
-                        <a href="/view_workouts" class="nav-link view-workout">View Workouts
+                        <a href="/workoutsummary" class="nav-link view-workout">View Workouts
                         </a>
                     </li>
                 </ul>
@@ -47,6 +58,7 @@
     <!-- End of Footer -->
 
 
+    {{!-- Scripts --}}
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <script src="/js/addworkout.js" type="application/javascript"></script>
