--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,18 +16,19 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.css" rel="stylesheet">
 
     <!--External CSS Link-->
-    <link rel="stylesheet" href="public/css/styles.css">
+    <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 
 <body>
-    {{#if logged_in}}
-    <nav>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <!--Nav Bar-->
+    {{!--<nav>
+        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
             <div class="logo">
                 <h3><i class="fas fa-running"></i>
                     Bootcamp Fitness
                 </h3>
             </div>
+
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -35,7 +36,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item mt-1">
-                        <a href="addworkout" class="nav-link add-workout">Add Workout
+                        <a href="/addworkout" class="nav-link add-workout">Add Workout
                         </a>
                     </li>
                     <li class="nav-item mr-2 mt-1">
@@ -45,26 +46,24 @@
                 </ul>
             </div>
         </nav>
-    </nav>
-    {{/if}}
+    </nav>--}}
     <!-- End of Navbar -->
 
     {{{body}}}
 
     <!-- Footer -->
     <footer id="sticky-footer" class="fixed-bottom bg-light py-1">
-        <p class="h6 text-center m-1">Copyright © 2021</p>
+        <p class="h6 text-right m-1">Copyright © 2022</p>
     </footer>
     <!-- End of Footer -->
-
 
     {{!-- Scripts --}}
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <script src="/public/js/addworkout.js" type="application/javascript"></script>
-    <script src="/public/js/signup.js" type="application/javascript"></script>
-    <script src="/public/js/login.js" type="application/javascript"></script>
-    <script src="/public/js/logout.js" type="application/javascript"></script>
+    <script src="js/workout.js" type="application/javascript"></script>
+    <script src="js/signup.js" type="application/javascript"></script>
+    <script src="js/login.js" type="application/javascript"></script>
+    <script src="js/logout.js" type="application/javascript"></script>
 </body>
 
 </html>
