--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,27 +1,25 @@
 {{!-- Login Container --}}
-<main id="login">
-    <div class="card">
-        <img src="/assets/logo.png">
-        <form id="login-form" class="card-body">
+<div class="card" style="width: 400px;">
+    <img src="assets/logo.png" class="card-img-top">
+    <form id="login-form" class="card-body">
+        <!--Email Input-->
+        <div class="form-outline mb-4">
+            <label for="email-login">Email:</label><br>
+            <input class="form-input" type="text" id="email-login" />
+        </div>
 
-            <!--Email Input-->
-            <div class="form-outline mb-4">
-                <label for="email-login">Email:</label><br>
-                <input class="form-input" type="text" id="email-login" />
-            </div>
+        <!--Password Input-->
+        <div class="form-outline mb-4">
+            <label for="password-login">Password:</label><br>
+            <input class="form-input" type="password" id="password-login" />
+        </div>
+        <div class="form-group">
+            <button id="login-btn" class="btn btn-primary" type="submit">login</button>
+        </div>
+        <br>
 
-            <!--Password Input-->
-            <div class="form-outline mb-4">
-                <label for="password-login">password:</label><br>
-                <input class="form-input" type="password" id="password-login" />
-            </div>
-            <div class="form-group">
-                <button id="login-btn" class="btn btn-primary" type="submit">login</button>
-            </div>
-            <br>
-
-            <!--Sign-Up Button-->
-            <a href="/signup">Sign Up</a>
-        </form>
-    </div>
+        <!--Sign-Up Button-->
+        <a href="/signup">Sign Up</a>
+    </form>
+</div>
 </main>
