--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,21 @@
 <div class="card">
+
+{{!-- Quotes html --}}
+    <div class="wrapper">
+      <div class="container">
+        <p id="quote">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas,
+          magni.
+        </p>
+        <h3 id="author">Lorem, ipsum.</h3>
+      </div>
+    </div>
+    <!-- Script -->
+    <script src="/public/js/login.js"></script>
+    <link rel="stylesheet" href="style.css" />
+
+
+
     <img src="/assets/logo.png">
     <form id="login-form" class="card-body">
         <!--Email Input-->
