--- a/views/addworkout.handlebars
+++ b/views/addworkout.handlebars
@@ -82,7 +82,7 @@
                                         <p>What would you like to do next?</p>
                                         <a class="btn close_modal pt-1 bye-btn" href="/addworkout" role="button">Add
                                             Another Workout</a>
-                                        <a class="btn close_modal pt-1 bye-btn" href="/workoutsummary"
+                                        <a class="btn close_modal pt-1 bye-btn" href="/view_workouts"
                                             role="button">View
                                             Workouts</a>
                                     </div>
