--- a/views/view_workouts.handlebars
+++ b/views/view_workouts.handlebars
@@ -18,7 +18,7 @@
                 <div class="m-0 card card-body">
                     <p>Distance: {{distance}}</p>
                     <p>Duration: {{duration}}</p>
-                    <p>Workout Details: {{details}}</p>
+                    <p>Workout Date: {{workout_date}}</p>
                 </div>
             </div>
 
