--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,8 @@
-{{!-- Login Container --}}
+<!--Login Form Card-->
 <div class="card" style="width: 400px;">
     <img src="assets/logo.png" class="card-img-top">
     <form id="login-form" class="card-body">
+
         <!--Email Input-->
         <div class="form-outline mb-4">
             <label for="email-login">Email:</label><br>
@@ -13,13 +14,31 @@
             <label for="password-login">Password:</label><br>
             <input class="form-input" type="password" id="password-login" />
         </div>
+        <!--End Password Input-->
+
+        <!--Login Button-->
         <div class="form-group">
             <button id="login-btn" class="btn btn-primary" type="submit">login</button>
         </div>
+        <!--End Login Button-->
         <br>
-
         <!--Sign-Up Button-->
-        <a href="/signup">Sign Up</a>
+        <div class="form-group">
+            <a href="/signup" class="btn btn-primary">No Account? Click Here</a>
+        </div> <br>
+        <!--End Sign Up Button-->
     </form>
+
+    <div class="wrapper">
+        <div class="container">
+            <p id="quote">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas,
+                magni.
+            </p>
+            <h3 id="author">Lorem, ipsum.</h3>
+            <script src="js/login.js" type="application/javascript"></script>
+        </div>
+    </div>
+
 </div>
 </main>
