--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,50 +20,35 @@
 </head>
 
 <body>
-    <!--Nav Bar-->
-    {{!--<nav>
-        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-            <div class="logo">
-                <h3><i class="fas fa-running"></i>
-                    Bootcamp Fitness
-                </h3>
-            </div>
-
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item mt-1">
-                        <a href="/addworkout" class="nav-link add-workout">Add Workout
-                        </a>
-                    </li>
-                    <li class="nav-item mr-2 mt-1">
-                        <a href="/view_workouts" class="nav-link view-workout">View Workouts
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </nav>--}}
-    <!-- End of Navbar -->
 
     {{{body}}}
 
     <!-- Footer -->
-    <footer id="sticky-footer" class="fixed-bottom bg-light py-1">
-        <p class="h6 text-right m-1">Copyright © 2022</p>
+    {{!--<footer id="sticky-footer" class="fixed-bottom bg-light py-1">
+        <div>
+            <p class="h6 text-right m-1">Copyright © 2022</p>
+        </div>
+        <div>
+            <p>Brittany Blalock</p>
+        </div>
+        <div>
+            <p>Mychael Contreras</p>
+        </div>
+        <div>
+            <p>Daniel Valean</p>
+        </div>
     </footer>
-    <!-- End of Footer -->
+    <!-- End of Footer -->--}}
 
-    {{!-- Scripts --}}
+    <!--Scripts-->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <script src="js/workout.js" type="application/javascript"></script>
     <script src="js/signup.js" type="application/javascript"></script>
     <script src="js/login.js" type="application/javascript"></script>
     <script src="js/logout.js" type="application/javascript"></script>
+    <!--Scripts-->
+
 </body>
 
 </html>
