Trying to troubleshoot issues with login/logout

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,4 @@
-<!--Login Form Card-->
-
+<!--Login Card-->
 <div class="card" style="width: 400px;">
     <img src="assets/logo.png" class="card-img-top">
     <form id="login-form" class="card-body">
@@ -37,9 +36,6 @@
                 magni.
             </p>
             <h3 id="author">Lorem, ipsum.</h3>
-            <script src="js/login.js" type="application/javascript"></script>
         </div>
     </div>
-
 </div>
-</main>
