--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -17,7 +17,7 @@
 
             <!--Sign-Up Button-->
             <div class="card-footer text-center">
-                <button type="submit" id="signup-btn" class="btn btn-theme">Sign Up</button>
+                <button type="submit" id="signup-btn" class="btn btn-theme"><a href="/login">Sign Up</button>
                 <!--End Sign-Up Button-->
 
                 <!--Back to Login page-->
